--- a/03-choreography/style.scss
+++ b/03-choreography/style.scss
@@ -9,6 +9,7 @@
   --transition-easing: cubic-bezier(0.5, 0, 0.5, 1);
   --animation-duration: 0.8s;
 }
+
 body {
   display: flex;
   justify-content: center;
@@ -30,6 +31,7 @@ body {
   will-change: transform;
 
   --color: var(--color-gray);
+
   &:focus-within {
     --color: var(--color-blue);
   }
@@ -41,11 +43,16 @@ body {
     // Add animations here
   }
 
+  --input-animation-duration: 0.4s;
+  --stagger: calc(var(--input-animation-duration) / 2);
+
   > .ui-input {
-    // ...
+    animation: zoom-in var(--input-animation-duration) var(--animation-duration);
   }
+
   > .ui-button {
-    // ...
+    animation: fade-in 1s calc(var(--animation-duration) + var(--input-animation-duration) - var(--stagger)) forwards;
+    opacity: 0;
   }
 }
 
@@ -107,5 +114,25 @@ body {
   from,
   to {
     transform: none;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes zoom-in {
+  from, to {
+    transform: none;
+  }
+
+  50% {
+    transform: scale(1.02);
   }
 }
