--- a/04-states/style.scss
+++ b/04-states/style.scss
@@ -4,6 +4,7 @@
   --color-gray: #8c97b7;
   --color-blue: #1c38f1;
   --color-green: #1fcdb0;
+  --color-red: #ff0000;
   --input-height: 3rem;
   --transition-duration: 0.3s;
   --transition-easing: cubic-bezier(0.5, 0, 0.5, 1);
@@ -35,15 +36,39 @@ body {
   }
 
   &[data-state='subscribe'] {
-    // Add an animation here
+    & > .ui-button > span:nth-child(1) {
+      display: inline;
+    }
+  }
+
+  &[data-state='subscribing'] {
+    & > .ui-button {
+      pointer-events: none;
+
+      & > span:nth-child(2) {
+        display: inline;
+      }
+    }
   }
 
   &[data-state='success'] {
-    // Change the color and/or add an animation here
+    --color: var(--color-green);
+
+    & > .ui-button > span:nth-child(3) {
+      display: inline;
+    }
   }
 
   &[data-state='error'] {
-    // Change the color and/or add an animation here
+    --color: var(--color-red);
+
+    animation-name: shake;
+    animation-duration: 800ms;
+    animation-fill-mode: both;
+
+    & > .ui-button > span:nth-child(4) {
+      display: inline;
+    }
   }
 
   > .ui-input,
@@ -52,6 +77,10 @@ body {
     animation-fill-mode: both;
     animation-timing-function: var(--transition-easing);
     animation-delay: calc(var(--animation-duration) / 2);
+
+    > span {
+      display: none;
+    }
   }
 
   > .ui-input {
